--- a/Todo-app/css/materializeS.css
+++ b/Todo-app/css/materializeS.css
@@ -1,10 +1,27 @@
 .date-grid {
   font-size: 3em;
   display: grid;
-  grid-template-columns: 10% 25%;
+  grid-template-columns: 25px 10px;
   align-items: center;
-  margin-bottom: 10px; }
+  margin-bottom: 5px; }
   .date-grid .month-day {
     font-size: 0.3em; }
+
+.modal-trigger {
+  margin-top: 10px; }
+
+.divider {
+  margin-left: calc(-10% + (8px/2));
+  margin-right: calc(-10% + (8px/2)); }
+
+#tasksUl {
+  margin-top: -25px; }
+  #tasksUl li {
+    padding: 10px; }
+    #tasksUl li .deleteButton {
+      border: none;
+      float: right;
+      font-size: 15px;
+      background-color: transparent; }
 
 /*# sourceMappingURL=materializeS.css.map */
