--- a/Todo-app/css/materializeS.css
+++ b/Todo-app/css/materializeS.css
@@ -23,5 +23,8 @@
       float: right;
       font-size: 15px;
       background-color: transparent; }
+      #tasksUl li .deleteButton:hover {
+        cursor: pointer;
+        color: #ff1744; }
 
 /*# sourceMappingURL=materializeS.css.map */
