--- a/Todo-app/scss/materializeS.scss
+++ b/Todo-app/scss/materializeS.scss
@@ -4,7 +4,6 @@
   grid-template-columns: 25px 10px;
   align-items: center;
   margin-bottom: 5px;
-
   .month-day {
     font-size: 0.3em;
   }
@@ -28,6 +27,10 @@
       float: right;
       font-size: 15px;
       background-color: transparent;
+      &:hover {
+        cursor: pointer;
+        color: #ff1744;
+      }
     }
   }
 }
