--- a/Todo-app/scss/materializeS.scss
+++ b/Todo-app/scss/materializeS.scss
@@ -1,16 +1,34 @@
-.date-grid {
-  font-size: 3em;
-  display: grid;
-  grid-template-columns: 25px 10px;
-  align-items: center;
-  margin-bottom: 5px;
-  .month-day {
-    font-size: 0.3em;
+.card-background {
+  background-color: #ACF7E2;
+  padding: 20px 10px 10px 10px;
+  /*Card stack */
+  .card-stack {
+    box-shadow: 3px 3px 3px 3px white, 3px 3px 3px 3px white, 3px 3px 3px 3px grey, 3px 3px 3px 3px white, 3px 3px 3px 3px white, 3px 3px 3px 3px grey, 3px 3px 3px 3px white, 3px 3px 3px 3px white, 3px 3px 3px 3px grey, 3px 3px 3px 3px white, 3px 3px 3px 3px white, 3px 3px 3px 3px grey, 3px 3px 3px 3px white, 3px 3px 3px 3px white, 3px 3px 3px 3px grey, 3px 3px 3px 3px white, 3px 3px 3px 3px white, 3px 3px 3px 3px grey;
+  }
+  /*Heading title*/
+  .heading-title {
+    margin-top: -7px;
+    margin-bottom: 20px;
+    color: #72C0B7;
+    font-weight: 800;
+  }
+  /* Displays the date*/
+  .date-grid {
+    font-size: 3em;
+    display: grid;
+    align-items: center;
+    margin-bottom: 15px;
+    color: rgb(73, 167, 156);
+    grid-template-columns: 25px 10px;
+    .month-day {
+      font-size: 0.3em;
+    }
   }
 }
 
 .modal-trigger {
   margin-top: 10px;
+  background-color: #ACF7E2;
 }
 
 .divider {
