--- a/Todo-app/css/materializeS.css
+++ b/Todo-app/css/materializeS.css
@@ -1,11 +1,15 @@
+/*Variables */
+/*Todo List */
 .card-background {
+  margin-top: 50px;
   background-color: #ACF7E2;
   padding: 20px 10px 10px 10px;
-  /*Card stack */
   /*Heading title*/
-  /* Displays the date*/ }
-  .card-background .card-stack {
-    box-shadow: 3px 3px 3px 3px white, 3px 3px 3px 3px white, 3px 3px 3px 3px grey, 3px 3px 3px 3px white, 3px 3px 3px 3px white, 3px 3px 3px 3px grey, 3px 3px 3px 3px white, 3px 3px 3px 3px white, 3px 3px 3px 3px grey, 3px 3px 3px 3px white, 3px 3px 3px 3px white, 3px 3px 3px 3px grey, 3px 3px 3px 3px white, 3px 3px 3px 3px white, 3px 3px 3px 3px grey, 3px 3px 3px 3px white, 3px 3px 3px 3px white, 3px 3px 3px 3px grey; }
+  /*Displays the date*/
+  /*Modal trigger*/
+  /*Divider*/
+  /*Task items*/
+  /*Card stack */ }
   .card-background .heading-title {
     margin-top: -7px;
     margin-bottom: 20px;
@@ -20,26 +24,25 @@
     grid-template-columns: 25px 10px; }
     .card-background .date-grid .month-day {
       font-size: 0.3em; }
-
-.modal-trigger {
-  margin-top: 10px;
-  background-color: #ACF7E2; }
-
-.divider {
-  margin-left: calc(-10% + (8px/2));
-  margin-right: calc(-10% + (8px/2)); }
-
-#tasksUl {
-  margin-top: -25px; }
-  #tasksUl li {
-    padding: 10px; }
-    #tasksUl li .deleteButton {
-      border: none;
-      float: right;
-      font-size: 15px;
-      background-color: transparent; }
-      #tasksUl li .deleteButton:hover {
-        cursor: pointer;
-        color: #ff1744; }
+  .card-background .modal-trigger {
+    margin-top: 10px;
+    background-color: #ACF7E2; }
+  .card-background .divider {
+    margin-left: calc(-10% + (8px/2));
+    margin-right: calc(-10% + (8px/2)); }
+  .card-background #tasksUl {
+    margin-top: -25px; }
+    .card-background #tasksUl li {
+      padding: 10px; }
+      .card-background #tasksUl li .deleteButton {
+        border: none;
+        float: right;
+        font-size: 15px;
+        background-color: transparent; }
+        .card-background #tasksUl li .deleteButton:hover {
+          cursor: pointer;
+          color: #ff1744; }
+  .card-background .card-stack {
+    box-shadow: 0 0.0625em 0.1875em 0 rgba(0, 0, 0, 0.1), 0 0.5em 0 -0.25em white, 0 0.5em 0.1875em -0.25em rgba(0, 0, 0, 0.1), 0 1em 0 -0.5em white, 0 1em 0.1875em -0.5em rgba(0, 0, 0, 0.1); }
 
 /*# sourceMappingURL=materializeS.css.map */
