--- a/Todo-app/scss/materializeS.scss
+++ b/Todo-app/scss/materializeS.scss
@@ -1,10 +1,14 @@
+/*Variables */
+
+$card-color: white;
+$shadow-color: black;
+
+/*Todo List */
+
 .card-background {
+  margin-top: 50px;
   background-color: #ACF7E2;
   padding: 20px 10px 10px 10px;
-  /*Card stack */
-  .card-stack {
-    box-shadow: 3px 3px 3px 3px white, 3px 3px 3px 3px white, 3px 3px 3px 3px grey, 3px 3px 3px 3px white, 3px 3px 3px 3px white, 3px 3px 3px 3px grey, 3px 3px 3px 3px white, 3px 3px 3px 3px white, 3px 3px 3px 3px grey, 3px 3px 3px 3px white, 3px 3px 3px 3px white, 3px 3px 3px 3px grey, 3px 3px 3px 3px white, 3px 3px 3px 3px white, 3px 3px 3px 3px grey, 3px 3px 3px 3px white, 3px 3px 3px 3px white, 3px 3px 3px 3px grey;
-  }
   /*Heading title*/
   .heading-title {
     margin-top: -7px;
@@ -12,7 +16,7 @@
     color: #72C0B7;
     font-weight: 800;
   }
-  /* Displays the date*/
+  /*Displays the date*/
   .date-grid {
     font-size: 3em;
     display: grid;
@@ -24,31 +28,35 @@
       font-size: 0.3em;
     }
   }
-}
-
-.modal-trigger {
-  margin-top: 10px;
-  background-color: #ACF7E2;
-}
-
-.divider {
-  margin-left: calc(-10% + (8px/2));
-  margin-right: calc(-10% + (8px/2));
-}
-
-#tasksUl {
-  margin-top: -25px;
-  li {
-    padding: 10px;
-    .deleteButton {
-      border: none;
-      float: right;
-      font-size: 15px;
-      background-color: transparent;
-      &:hover {
-        cursor: pointer;
-        color: #ff1744;
+  /*Modal trigger*/
+  .modal-trigger {
+    margin-top: 10px;
+    background-color: #ACF7E2;
+  }
+  /*Divider*/
+  .divider {
+    margin-left: calc(-10% + (8px/2));
+    margin-right: calc(-10% + (8px/2));
+  }
+  /*Task items*/
+  #tasksUl {
+    margin-top: -25px;
+    li {
+      padding: 10px;
+      .deleteButton {
+        border: none;
+        float: right;
+        font-size: 15px;
+        background-color: transparent;
+        &:hover {
+          cursor: pointer;
+          color: #ff1744;
+        }
       }
     }
+  }
+  /*Card stack */
+  .card-stack {
+    box-shadow: 0 0.0625em 0.1875em 0 rgba( $shadow-color, 0.1), 0 0.5em 0 -0.25em rgba( $card-color, 5%), 0 0.5em 0.1875em -0.25em rgba( $shadow-color, 0.1), 0 1em 0 -0.5em rgba( $card-color, 10%), 0 1em 0.1875em -0.5em rgba( $shadow-color, 0.1);
   }
 }
