--- a/Todo-app/css/style.css
+++ b/Todo-app/css/style.css
@@ -32,12 +32,13 @@
     margin-left: calc(-10% + (8px/2));
     margin-right: calc(-10% + (8px/2)); }
   .card-background #tasksUl {
-    margin-top: -25px; }
+    margin-top: -25px;
+    margin-bottom: -25px; }
     .card-background #tasksUl li {
       padding: 10px;
       /*Delete Button*/ }
       .card-background #tasksUl li [type="checkbox"] {
-        position: unset;
+        position: static;
         opacity: 1;
         pointer-events: fill;
         float: left;
@@ -51,6 +52,11 @@
         .card-background #tasksUl li .deleteButton:hover {
           cursor: pointer;
           color: #ff1744; }
+  .card-background #taskItems {
+    float: left; }
+  .card-background .task-counter {
+    margin-top: 10px;
+    margin-bottom: 15px; }
   .card-background .card-stack {
     box-shadow: 0 0.0625em 0.1875em 0 rgba(0, 0, 0, 0.1), 0 0.5em 0 -0.25em white, 0 0.5em 0.1875em -0.25em rgba(0, 0, 0, 0.1), 0 1em 0 -0.5em white, 0 1em 0.1875em -0.5em rgba(0, 0, 0, 0.1); }
 
