--- a/Todo-app/scss/style.scss
+++ b/Todo-app/scss/style.scss
@@ -6,6 +6,7 @@ $shadow-color: black;
 /*Todo List */
 
 .card-background {
+  min-width: 100%;
   margin-top: 50px;
   background-color: #acf7e2;
   padding: 20px 10px 10px 10px;
@@ -44,12 +45,16 @@ $shadow-color: black;
     li {
       padding: 10px;
       [type ="checkbox"] {
-        position: static;
-        opacity: 1;
+        position: fixed;
         pointer-events: fill;
+        margin-left: -82px;
+        z-index: 1;
+        width: 25px;
+        height: 25px;
+      }
+
+      .checkbox {
         float: left;
-        margin-right: 5px;
-        margin-top: 6px;
       }
       /*Delete Button*/
       .deleteButton {
