Modified commets and fonts

--- a/Todo-app/css/style.css
+++ b/Todo-app/css/style.css
@@ -1,5 +1,15 @@
-/*Variables */
-/*Todo List */
+/* ==========================================================================
+                                 Variables
+   ========================================================================== */
+/* ==========================================================================
+                                 General
+   ========================================================================== */
+body {
+  font-family: 'Lato', sans-serif; }
+
+/* ==========================================================================
+                                 Todo List 
+   ========================================================================== */
 .card-background {
   min-width: 100%;
   margin-top: 50px;
