--- a/Todo-app/scss/style.scss
+++ b/Todo-app/scss/style.scss
@@ -63,6 +63,9 @@ body {
         z-index: 1;
         width: 25px;
         height: 25px;
+        &:hover {
+          cursor: pointer;
+        }
       }
       .checkbox {
         float: left;
