--- a/Todo-app/css/style.css
+++ b/Todo-app/css/style.css
@@ -5,7 +5,7 @@
                                  General
    ========================================================================== */
 body {
-  font-family: 'Lato', sans-serif; }
+  font-family: "Lato", sans-serif; }
 
 /* ==========================================================================
                                  Todo List 
@@ -46,9 +46,10 @@ body {
       /*Delete Button*/ }
       .card-background #tasksUl li [type="checkbox"] {
         position: fixed;
+        opacity: 1;
         pointer-events: fill;
         margin-left: -82px;
-        z-index: 1;
+        z-index: 100;
         width: 25px;
         height: 25px; }
         .card-background #tasksUl li [type="checkbox"]:hover {
