--- a/name-calculator/css/main.css
+++ b/name-calculator/css/main.css
@@ -1,86 +1,105 @@
-@import 'reset.css';
+@import "reset.css";
 *,
 *:before,
 *:after {
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html,
 body {
-    height: 100vh;
+  height: 100vh;
 }
 
 body {
-    display: grid;
-    place-content: center;
-    background: url(https://source.unsplash.com/nCrrvuoyftA) no-repeat center center/cover;
+  display: grid;
+  place-content: center;
+  background: url(https://source.unsplash.com/nCrrvuoyftA) no-repeat center
+    center/cover;
 }
 
 .container {
-    padding: 20px;
-    border: 8px double;
-    background-color: #fff;
+  padding: 20px;
+  border: 8px double;
+  background-color: #fff;
 }
 
 h1,
-#calculate {
-    text-transform: uppercase;
+#calculate,
+button {
+  text-transform: uppercase;
 }
 
 h1 {
-    font-size: 2em;
-    margin-bottom: 20px;
+  font-size: 2em;
+  margin-bottom: 20px;
 }
 
 .label-error {
-    margin-bottom: 5px;
+  margin-bottom: 5px;
 }
 
 label {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 .error {
-    color: red;
-    font-size: .8em;
-    visibility: hidden;
+  color: red;
+  font-size: 0.8em;
+  visibility: hidden;
 }
 
 #nameInput {
-    border: 0;
-    outline: 0;
-    height: 25px;
-    width: 100%;
-    border-radius: 5px;
-    padding-left: 10px;
-    margin-bottom: 20px;
-    background-color: burlywood;
+  border: 0;
+  outline: 0;
+  height: 25px;
+  width: 100%;
+  border-radius: 5px;
+  padding-left: 10px;
+  margin-bottom: 20px;
+  background-color: burlywood;
 }
 
 .cost {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .displayCost {
-    padding: 10px;
-    color: orange;
-    border-radius: 5px;
-    visibility: hidden;
-    background-color: #000;
+  padding: 10px;
+  color: orange;
+  border-radius: 5px;
+  visibility: hidden;
+  background-color: #000;
+}
+
+button {
+  border: 0;
+  outline: 0;
+  color: #000;
+  font-size: 0.6em;
+  margin-left: auto;
+  border-radius: 5px;
+  margin-right: 10px;
+  background-color: #ec971f;
+}
+
+button:hover {
+  cursor: pointer;
+  background-color: rgb(248, 192, 114);
 }
 
 #calculate {
-    border: 0;
-    outline: 0;
-    color: orange;
-    border-radius: 10px;
-    background-color: #000;
+  border: 0;
+  outline: 0;
+  color: orange;
+  font-size: 0.6em;
+  border-radius: 5px;
+  background-color: #000;
 }
 
 #calculate:hover {
-    cursor: pointer;
-    background-color: rgba(0, 0, 0, .8)
+  cursor: pointer;
+  background-color: rgba(0, 0, 0, 0.8);
 }
